syntax = "proto3";

option go_package = "main/internal/microservices/track/proto";

import "google/protobuf/empty.proto";
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative   track.proto
service TrackService {
  rpc Listen (TrackId) returns (google.protobuf.Empty) {}
  rpc Like (TrackToUserId) returns (google.protobuf.Empty) {}
}

message TrackId {
  uint64 trackId = 1;
}

message TrackToUserId {
  string userId = 1;
  uint64 trackId = 2;
}

message Track {
  uint64 Id = 1;
  string Name = 2;
  string Preview = 3;
  string Content = 4;
  string ArtistName = 5;
  uint32 Duration = 6;
  bool isLiked = 7;
}

message TracksResponse {
  repeated Track tracks = 1;
}
